--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -2,32 +2,30 @@
 	<div class="top-bar">
 		<div class="top-bar-left">
 			<ul class="menu">
+			  <!-- Add feature to check whether active or not -->
 				<li class="menu-text">Home</li>
-<!-- 		<li><a href="#">One</a></li>
-				<li><a href="#">Two</a></li>
-				<li><a href="#">Three</a></li>   -->			
+<!-- 		    <li class="menu-text"><a href="#">Project One</a></li>
+				<li class="menu-text"><a href="#">Project Two</a></li>
+				<li class="menu-text"><a href="#">Project Three</a></li>  			 -->
 			</ul>
 		</div>
 	</div>
 	 
-	<div class="callout large primary">
+	<div class="callout large home-header">
 		<div class="row column text-center">
-			<h1>My Rails Club</h1>
+			<h1>MyRails.Club</h1>
 			<h2 class="subheader">A Club for Rails Projects</h2>
 		</div>
 	</div>
 	 
 	<div class="row medium-8 large-7 columns">
 		<div class="blog-post">
-			<h3>The Beginning of a New Club <small>3/6/2015</small></h3>
-			<img class="thumbnail" src="http://placehold.it/850x350">
-			<p>This is the place I will be collecting all of my Rails projects. It'll be a portfolio of sorts. Why the name? I picked up <%= link_to "myrails.club", "http://myrails.club" %> for about a buck.</p>
-			<div class="callout">
-				<ul class="menu simple">
-					<li><a href="#">Author: Justin Hiltz</a></li>
-<!-- 					<li><a href="#">Comments: 3</a></li> -->
-				</ul>
-			</div>
+			<h3>The Beginning of a New Club <small>February 24, 2016</small>
+			<h6><%= link_to "Author: Justin Hiltz", "https://twitter.com/justin_hiltz" %></h6>
+			<!-- <img class="thumbnail" src="http://placehold.it/850x350"> 
+			<%= image_tag("trees-bg.jpeg") %> -->
+			<p>This is the place I will be collecting all of my Rails projects. It'll be a portfolio of sorts. Why the name? I picked up <%= link_to "myrails.club", "https://www.myrails.club" %> for about a buck.</p>
+			<p>My website is <%= link_to "justinhiltz.com", "https://justinhiltz.com" %> and my Github profile is <%= link_to "here", "https://github.com/justinhiltz" %>.
 		</div>
 	</div>
 </body>
