--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -2,6 +2,8 @@
 
 @import 'settings';
 @import 'foundation';
+@import url(https://fonts.googleapis.com/css?family=Playfair+Display:400,900);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,600);
 
 // If you'd like to include motion-ui, you need to install the motion-ui sass package.
 //
@@ -49,3 +51,4 @@
 //
 // @include motion-ui-transitions;
 // @include motion-ui-animations;
+
