Small CSS change

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -8,6 +8,7 @@
   min-height: 300px;
 
   h1 {
+  	padding-top: 60px;
 	  font-family: 'Playfair Display', serif;
 	  font-weight: 900;
 	  color: white;  	
@@ -38,6 +39,7 @@
 	color: white;
 }
 
+// Font sizes for Foundation icons
 .size-12 { font-size: 12px; }
 .size-14 { font-size: 14px; }
 .size-16 { font-size: 16px; }
