--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -9,8 +9,8 @@
 	 
 	<div class="row medium-8 large-7 columns">
 		<div class="blog-post">
-			<h3>The Beginning of a New Club <small>February 24, 2016</small>
-			<h6><%= link_to "Author: Justin Hiltz", "https://twitter.com/justin_hiltz" %></h6>
+			<h3>The Beginning of a New Club
+			<h6><%= link_to "Justin Hiltz", "https://twitter.com/justin_hiltz" %></h6>
 			<p>This is the place I will be collecting all of my Rails projects. It'll be a portfolio of sorts. Why the name? I picked up <%= link_to "myrails.club", "https://www.myrails.club" %> for about a buck.</p>
 			<p>My website is <%= link_to "justinhiltz.com", "https://justinhiltz.com" %> and my Github profile is <%= link_to "here", "https://github.com/justinhiltz" %>.</p>
 		</div>
